--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,9 +3,9 @@
 def projectProperties = [
         [$class: 'BuildDiscarderProperty', strategy: [$class: 'LogRotator', numToKeepStr: '5']],
         parameters([
-            string(name: 'DOCKER_USER', defaultValue: '', description: 'docker用户名'),
-            string(name: 'DOCKER_PASSWORD', defaultValue: '', description: 'docker用户密码'),
-            string(name: 'REGISTRY_URL', defaultValue: 'docker.io', description: 'docker仓库地址')
+            string(name: 'DOCKER_USER', defaultValue: 'lisir', description: 'docker用户名'),
+            string(name: 'DOCKER_PASSWORD', defaultValue: 'Ly800213', description: 'docker用户密码'),
+            string(name: 'REGISTRY_URL', defaultValue: 'harbor.dtlisir.cn', description: 'docker仓库地址')
         ])
 ]
 
@@ -66,15 +66,15 @@ podTemplate(label: label, cloud: 'kubernetes', inheritFrom: 'default', container
             }
 
             stage('docker-build') {
-                sh "docker build . -t ${params.REGISTRY_URL}/lusyoe/k8s-example:${shortGitCommit}"
+                sh "docker build . -t ${params.REGISTRY_URL}/springboot-k8s-example/k8s-example:${shortGitCommit}"
             }
 
             stage('docker-push') {
-                sh "docker push ${params.REGISTRY_URL}/lusyoe/k8s-example:${shortGitCommit}"
+                sh "docker push ${params.REGISTRY_URL}/springboot-k8s-example/k8s-example:${shortGitCommit}"
             }
 
             stage('docker-remove') {
-                sh "docker rmi ${params.REGISTRY_URL}/lusyoe/k8s-example:${shortGitCommit}"
+                sh "docker rmi ${params.REGISTRY_URL}/springboot-k8s-example/k8s-example:${shortGitCommit}"
             }
 
         }
@@ -82,7 +82,7 @@ podTemplate(label: label, cloud: 'kubernetes', inheritFrom: 'default', container
 
         container('kubectl') {
             stage('k8s deploy') {
-                sh "sed -i \"s/lusyoe\\/k8s-example/${params.REGISTRY_URL}\\/lusyoe\\/k8s-example:${shortGitCommit}/g\" k8s-example.yaml"
+                sh "sed -i \"s/lusyoe\\/k8s-example/${params.REGISTRY_URL}\\/springboot-k8s-example\\/k8s-example:${shortGitCommit}/g\" k8s-example.yaml"
                 sh "kubectl --kubeconfig=/root/.kube/config apply -f k8s-example.yaml"
             }
         }
